04.11 test fixes in product